--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Data Science for Agriculture in R</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.13/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/lumen.min.css" rel="stylesheet" />
@@ -102,6 +102,7 @@
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -126,6 +127,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -354,7 +358,7 @@ div.tocify {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -367,14 +371,14 @@ div.tocify {
   <a href="index.html">Home</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Examples
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-submenu">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Getting Started</a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Getting Started</a>
       <ul class="dropdown-menu" role="menu">
         <li>
           <a href="rbasics.html">R Basics</a>
@@ -388,7 +392,7 @@ div.tocify {
       </ul>
     </li>
     <li class="dropdown-submenu">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Simple Experiments</a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Simple Experiments</a>
       <ul class="dropdown-menu" role="menu">
         <li>
           <a href="CRD_Mead1993.html">crd_Mead1993</a>
@@ -398,6 +402,9 @@ div.tocify {
         </li>
         <li>
           <a href="latsquare_Bridges1989.html">latsquare_Bridges1989</a>
+        </li>
+        <li>
+          <a href="RCBD_2f_rice.html">rcbd_RCBD_2f_rice</a>
         </li>
         <li>
           <a href="augmented_Pattersen1994.html">augmented_Pattersen1994</a>
@@ -414,7 +421,7 @@ div.tocify {
       </ul>
     </li>
     <li class="dropdown-submenu">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Complex Experiments</a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Complex Experiments</a>
       <ul class="dropdown-menu" role="menu">
         <li>
           <a href="subsampling_Piepho1997.html">subsampling_Piepho1997</a>
@@ -430,7 +437,7 @@ div.tocify {
   </ul>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Summaries
      
     <span class="caret"></span>
@@ -458,7 +465,7 @@ div.tocify {
 <div id="header">
 
 <div class="btn-group pull-right float-right">
-<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
 <ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
 <li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
 <li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
@@ -472,12 +479,39 @@ div.tocify {
 </div>
 
 
-<div id="hi-there" class="section level1 tabset tabset-fade tabset-pills">
+<div id="hi-there"
+class="section level1 tabset tabset-fade tabset-pills">
 <h1 class="tabset tabset-fade tabset-pills">Hi there!</h1>
-<p><a href="https://schmidtpaul.github.io/DSFAIR/" target="_blank">DSFAIR - Data Science for Agriculture in R</a> provides a cookbook with statistical analyses of typical examples in life sciences (focus on experimental agriculture/biology/ecology). It can be seen as the younger brother of <a href="https://schmidtpaul.github.io/MMFAIR/" target="_blank">MMFAIR - Mixed Models for Agriculture in R</a>, because it deals with more basic analyses. Where possible, I try to use example data/analyses that have been published in university lecture notes or peer-reviewed journals. Note that <a href="https://schmidtpaul.github.io/crashcouRse" target="_blank">CrashcouRse - R für Bio- und Agrarwissenschaftler</a> is the German predecessor of this website.</p>
-<p>In terms of R syntax, I generally try to follow the approach presented on the <a href="https://r4ds.had.co.nz/" target="_blank">“R for Data Science” website</a>, often making use of the following packages:</p>
-<p><a href="https://tidyverse.tidyverse.org/"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tidyverse.png" width="80"></a> <a href="https://r4ds.had.co.nz/pipes.html"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/pipe.png" width="80"></a> <a href="https://ggplot2.tidyverse.org/"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/ggplot2.png" width="80"></a> <a href="https://kwstat.github.io/desplot/"><img src="https://raw.githubusercontent.com/kwstat/desplot/master/man/figures/logo.png" width="80"></a> <a href="https://scales.r-lib.org/"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/scales.png" width="80"></a> <a href="http://sfirke.github.io/janitor/"><img src="https://raw.githubusercontent.com/sfirke/janitor/main/man/figures/logo_small.png" width="80"></a></p>
-<p><a href="0courseprep.html" target="_blank">Here are some tips</a> to help you prepare for an upcoming workshop!</p>
+<p><a href="https://schmidtpaul.github.io/DSFAIR/"
+target="_blank">DSFAIR - Data Science for Agriculture in R</a> provides
+a cookbook with statistical analyses of typical examples in life
+sciences (focus on experimental agriculture/biology/ecology). It can be
+seen as the younger brother of <a
+href="https://schmidtpaul.github.io/MMFAIR/" target="_blank">MMFAIR -
+Mixed Models for Agriculture in R</a>, because it deals with more basic
+analyses. Where possible, I try to use example data/analyses that have
+been published in university lecture notes or peer-reviewed journals.
+Note that <a href="https://schmidtpaul.github.io/crashcouRse"
+target="_blank">CrashcouRse - R für Bio- und Agrarwissenschaftler</a> is
+the German predecessor of this website.</p>
+<p>In terms of R syntax, I generally try to follow the approach
+presented on the <a href="https://r4ds.had.co.nz/" target="_blank">“R
+for Data Science” website</a>, often making use of the following
+packages:</p>
+<p><a
+href="https://tidyverse.tidyverse.org/"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tidyverse.png" width="80"></a>
+<a
+href="https://r4ds.had.co.nz/pipes.html"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/pipe.png" width="80"></a>
+<a
+href="https://ggplot2.tidyverse.org/"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/ggplot2.png" width="80"></a>
+<a
+href="https://kwstat.github.io/desplot/"><img src="https://raw.githubusercontent.com/kwstat/desplot/master/man/figures/logo.png" width="80"></a>
+<a
+href="https://scales.r-lib.org/"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/scales.png" width="80"></a>
+<a
+href="http://sfirke.github.io/janitor/"><img src="https://raw.githubusercontent.com/sfirke/janitor/main/man/figures/logo_small.png" width="80"></a></p>
+<p><a href="0courseprep.html" target="_blank">Here are some tips</a> to
+help you prepare for an upcoming workshop!</p>
 </div>
 
 &nbsp;
